added main with flexbox

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,6 +1,6 @@
 // --------------- COLORS ---------------
 
-$primary-blue: #1743b2;
+$primary-blue: #1f47ad;
 $primary-white: #ffffff;
 $primary-black: #000000;
 
