--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,4 +1,14 @@
+// ------- ALL -------- 
 
 body {
     background-color: $primary-blue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
