--- a/css/_base.scss
+++ b/css/_base.scss
@@ -2,7 +2,7 @@
 
 body {
     background-color: $primary-blue;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Roboto", sans-serif;
     color: white;
 }
 
@@ -12,3 +12,4 @@ main {
     justify-content: center;
     align-items: center;
 }
+
