styled with flex on section and added category

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -1,8 +1,16 @@
 // ------- ALL -------- 
 
 body {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     font-family: "Open-Sans", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 1rem;
+}
+
+h1 {
+    margin-top: 1rem;
 }
 
 img {
@@ -29,8 +37,21 @@ main {
     }
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
 .product {
-    background-color: rgba(0, 0, 0, 0.084);
+    background-color: rgba(0, 0, 0, 0.053);
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.273);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    border-radius: 10px;
     margin-bottom: 2rem;
 }
 
