--- a/css/_base.scss
+++ b/css/_base.scss
@@ -6,11 +6,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 1rem;
-}
-
-h1 {
-    margin-top: 1rem;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 img {
@@ -41,12 +38,16 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
+
+.sorting-btn {
+    margin: 20px 10px 20px 10px;
+}
+
 
 .product {
     background-color: rgba(0, 0, 0, 0.053);
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.273);
+    border: $primary-blue solid 3px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,4 +56,16 @@ section {
     margin-bottom: 2rem;
 }
 
-
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    label {
+        margin: 2px
+    }
+    div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
