--- a/css/_base.scss
+++ b/css/_base.scss
@@ -22,6 +22,13 @@ header {
     height: 5rem;
 }
 
+footer {
+    background-color: $primary-blue;
+    margin-top: 1rem;
+    height: 5rem;
+    width: 100%;
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -67,5 +74,12 @@ form {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .reset {
+        margin: 10px 0 10px 0;
+    }
+    .submit {
+        width: 400px;
+        height: 50px;
     }
 }
