--- a/css/_base.scss
+++ b/css/_base.scss
@@ -5,12 +5,7 @@ body {
     font-family: "Open-Sans", sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     margin-bottom: 10px;
     margin-top: 10px;
 }
@@ -66,7 +61,6 @@ section {
     padding: 1rem;
     border-radius: 10px;
     margin-bottom: 2rem;
-
     /* Firefox */
     input[type=number] {
         -moz-appearance: textfield;
@@ -77,7 +71,7 @@ section {
         -webkit-appearance: none;
         margin: 0;
     }
-    input:hover {
+    div, input:hover {
         cursor: default;
     }
 }
