--- a/css/_base.scss
+++ b/css/_base.scss
@@ -8,6 +8,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 10px;
     margin-top: 10px;
+    color: $primary-blue;
 }
 
 img {
@@ -61,6 +62,7 @@ section {
     padding: 1rem;
     border-radius: 10px;
     margin-bottom: 2rem;
+    color: $primary-blue;
     /* Firefox */
     input[type=number] {
         -moz-appearance: textfield;
@@ -74,6 +76,25 @@ section {
     div, input:hover {
         cursor: default;
     }
+    .amount-btn {
+        width: 32px;
+        height: 32px;
+        border: none;
+        border-radius: 10px;
+        margin: 0 2px 0 2px;
+        color: $primary-blue
+    }
+    .amount-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 42px;
+        border: $primary-blue solid 3px;
+        border-radius: 13px;
+        font-size: 20px;
+        color: $primary-blue;
+    }
 }
 
 form {
@@ -82,7 +103,8 @@ form {
     align-items: center;
 
     label {
-        margin: 2px
+        margin: 2px;
+        width: 100%;
     }
 
     div {
