--- a/css/_base.scss
+++ b/css/_base.scss
@@ -127,6 +127,7 @@ section {
     border-radius: 10px;
     margin-bottom: 2rem;
     color: $primary-blue;
+    transition: background-color .3s;
     /* Firefox */
     input[type=number] {
         -moz-appearance: textfield;
@@ -159,6 +160,10 @@ section {
         font-size: 20px;
         color: $primary-blue;
     }
+}
+
+.product:hover {
+    background-color: rgba(255, 255, 255, 0.622);
 }
 
 .cart-section {
