--- a/css/style.scss
+++ b/css/style.scss
@@ -11,14 +11,14 @@
 
 @import 'base';
 
-// // --------------- TABLET ---------------
+// --------------- TABLET ---------------
 
-// @media screen and (min-width: 768px) {
-//     @import 'tablet';
-// }
+@media screen and (min-width: 768px) {
+    @import 'tablet';
+}
 
-// // --------------- DESKTOP ---------------
+// --------------- DESKTOP ---------------
 
-// @media screen and (min-width: 1280px) {
-//     @import 'desktop';
-// }
+@media screen and (min-width: 1400px) {
+    @import 'desktop';
+}
