--- a/css/_base.scss
+++ b/css/_base.scss
@@ -5,11 +5,6 @@ body {
     font-family: "Open-Sans", sans-serif;
 }
 
-
-.hidden {
-    display: none;
-}
-
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 10px;
     margin-top: 10px;
@@ -127,7 +122,7 @@ section {
     border-radius: 10px;
     margin-bottom: 2rem;
     color: $primary-blue;
-    transition: background-color .3s;
+    transition: background-color .5s;
     /* Firefox */
     input[type=number] {
         -moz-appearance: textfield;
@@ -162,8 +157,8 @@ section {
     }
 }
 
-.product:hover {
-    background-color: rgba(255, 255, 255, 0.622);
+.product:hover, .product:active {
+    background-color: rgba(255, 255, 255, 0.127);
 }
 
 .cart-section {
@@ -237,9 +232,30 @@ form {
     margin: 10px 0 10px 0;
 }
 
+.confirmation {
+    background-color: rgba(255, 0, 0, 0.177);
+    padding: 10px;
+    border-radius: 10px;
+}
+
 footer {
     background-color: $primary-blue;
     margin-top: 1rem;
     height: 5rem;
     width: 100%;
+}
+
+// TEST DEBUGG
+
+.test {
+    background-color: red;
+    color: yellow;
+}
+
+.hidden {
+    display: none;
+}
+
+.invisible {
+    visibility: hidden;
 }
