--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,7 +1,11 @@
 // --------------- COLORS ---------------
 
-$primary-blue: #1f47ad;
-$primary-white: #ffffff;
-$primary-black: #000000;
+$blue: #1f47ad;
+$cream: #e0b589;
+$white: #fcf9f0;
+$grey: #d4d4d4;
+$black: #151515;
+$trans-grey: rgba(0, 0, 0, 0.1);
+$pinkish: rgb(251, 226, 196);
 
 // --------------- MORE VARIABLES ---------------
