--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -2,6 +2,42 @@ body {
     // background-color: $pinkish; TESTING
 }
 
+h1 {
+    font-size: 2.8rem;
+}
+
+h2 {
+    font-size: 1.7rem;
+}
+
+.sorting-container {
+    padding: 10px;
+    border-radius: 10px;
+    max-width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+
+
+    h2 {
+        grid-column: span 12;
+        align-self: center;
+        justify-self: center;
+    }
+    div {
+        justify-content: center;
+    }
+    > :nth-child(2) {
+        grid-column: 1 / 4;
+    }
+    > :nth-child(3) {
+        grid-column: 9 / 12;
+    }
+    > :nth-child(4) {
+        grid-column: 12 / 13;
+    }
+}
+
+
 .products-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
