--- a/css/_tablet.scss
+++ b/css/_tablet.scss
@@ -2,6 +2,36 @@ body {
     // background-color: rgb(245, 234, 220); TESTING
 }
 
+.sorting-container {
+    padding: 10px;
+    border-radius: 10px;
+    max-width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+
+
+    h2 {
+        grid-column: span 12;
+        align-self: center;
+        justify-self: center;
+    }
+    div {
+        justify-content: center;
+    }
+    > :nth-child(2) {
+        grid-column: 1 / 6;
+    }
+    > :nth-child(3) {
+        grid-column: 6 / 12;
+        justify-content: flex-end;
+    }
+    > :nth-child(4) {
+        grid-column: 12 / 13;
+    }
+}
+
+
+
 .products-container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
