accesibility fixes - aria labels and tab outlines

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -111,6 +111,12 @@ header {
         text-transform: uppercase;
     }
 
+    // Show cart Link Outline
+    .cart-link:focus {
+        outline: 2px solid #007bff; 
+  
+    }
+
     .cart-container {
         position: fixed;
         top: 3rem;
