--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,6 +6,14 @@ $white: #fcf9f0;
 $grey: #d4d4d4;
 $black: #151515;
 $trans-grey: rgba(0, 0, 0, 0.05);
+$trans-white: rgba(255, 255, 255, 0.05);
 $pinkish: rgb(251, 226, 196);
+
+
+// --- DARK MODE ---
+
+$darkblue: #242436;
+$bluegrey: rgb(68, 68, 81);
+$lightgrey: rgb(237, 234, 229);
 
 // --------------- MORE VARIABLES ---------------
